--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,28 @@
 body {
     background-color: skyblue;
 }
+
+.hero-scene {
+    position: relative;
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url(./img/manette.jpg);
+        background-size: cover;
+        filter : brightness(0.7);
+    }
+    * {
+        position: relative;
+    }
+    .hero-scene-content {
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
