--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,13 +5,115 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         {% endblock %}
 
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block header %}
+            <header>
+                <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+                    <div class="container-fluid">
+                        <a class="navbar-brand text-purple" href="/">GameStore</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse text-purple" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                <li class="nav-item"><a class="nav-link" href="/">Accueil</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/game">Nos jeux</a></li>
+                                <li class="nav-item" data-show="disconnected"><a class="nav-link" href="/user">Connexion</a></li>
+                                <li class="nav-item dropdown" data-show="connected">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Mon espace</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="/order" data-show="user">Mon panier</a></li>
+                                        <li><a class="dropdown-item" href="/profil">Mes infos</a></li>
+                                        <li><hr class="dropdown-divider"></li>
+                                        <li><button class="dropdown-item" id="signout">Se déconnecter</button></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+                <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+                    <div class="container-fluid">
+                        <form class="d-flex ms-auto" role="search">
+                            <input class="form-control me-2" id="game-search" type="search" placeholder="Rechercher un jeu" aria-label="Search">
+                            <button class="btn btn-secondary" type="submit">Rechercher</button>
+                        </form>
+                    </div>
+                </nav>
+            </header>
+        {% endblock %}
+
+
+        {% block body %}
+            <div class="hero-scene">
+                <div class="text-center hero-scene-content text-purple">
+                    <h1>GameStore</h1>
+                    <a class="btn btn-secondary" href="/stores">Trouver mon magasin</a>
+                </div>
+            </div>
+
+            <section>
+                <article>
+                    <div class="container-1 p-4">
+                        <h2 class="text-center text-secondary p-4">Bienvenue sur GameStore</h2>
+                        <div class="justify-content-center text-center text-dark">
+                            <p>Bienvenue sur GameStore, une boutique unique pour s'immerger dans l'univers des jeux vidéos. <br> Venez découvrir tous nos jeux!</p>
+                            <p>Aucun paiement en ligne! <br> Trouvez la boutique la plus près de chez vous, réservez un jeu en directement sur le site, et venez le chercher près de chez vous! <br> Le paiement ne se fait qu'à se moment là!</p>
+                        </div>
+                        <div class="text-center">
+                            <a class="btn btn-secondary m-4" href="/store">Nos magasins</a>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="container-2 p-4">
+                        <h2 class="text-center p-4 text-purple">Nos Promotions</h2>
+                        <p>[-- INSERER CARDS --]</p>
+                        <div class="text-center">
+                            <a class="btn btn-secondary m-4" href="/user">Profitez en vite ! Connectez vous !</a>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="container-1 p-4">
+                        <h2 class="text-center text-secondary p-4">Les nouveautés</h2>
+                        <p>[-- INSERER CARDS --]</p>
+                        <div class="text-center">
+                            <a class="btn btn-secondary m-4" href="/games">Nos jeux</a>
+                        </div>
+                    </div>
+                </article>
+            </section>
+        {% endblock %}
+
+
+        {% block footer %}
+        <footer class="bg-dark text-white text-center footer">
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <h3 class="text-purple"> Nos horaires</h3>
+                <p class="text-primary">Du Mardi au Samedi <br> <strong>Matin:</strong><br> 9h à 13h <br><strong>Après-midi:</strong><br> 14h30 à 19h</p>
+            </div>
+            <div class="col-6 col-lg-4">
+                <h3 class="text-purple">Contact</h3>
+                <p><a href="/store">Nos magasins</a></p><br><br>
+                <p><a href="/legalMention">Mentions légales</a></p>
+            </div>
+            <div class="col-6 col-lg-4 text-primary">
+                <h3 class="text-purple">ECF</h3>
+                <p>Vanlaer Cynthia <br>Novembre/Décembre 2024</p>
+            </div>
+        </div>
+        </footer>
+        {% endblock %}
     </body>
 </html>
