--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,11 +1,4 @@
 {{ form_start(form) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.roles) }}
-    {{ form_row(form.password) }}
-    {{ form_row(form.firstname) }}
-    {{ form_row(form.lastname) }}
-    {{ form_row(form.birthdate) }}
-    {{ form_row(form.created_at) }}
-    {{ form_row(form.update_at) }}
+    {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
