--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -5,10 +5,7 @@
 {% block body %}
     <h1>Edit User</h1>
 
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Update') }}</button>
-    {{ form_end(form) }}
+    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('app_user_index') }}">back to list</a>
 
