--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                 <li class="nav-item"><a class="nav-link" href="/">Accueil</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/game">Nos jeux</a></li>
-                                <li class="nav-item" data-show="disconnected"><a class="nav-link" href="/user">Connexion</a></li>
+                                <li class="nav-item" data-show="disconnected"><a class="nav-link" href="/login">Connexion</a></li>
                                 <li class="nav-item dropdown" data-show="connected">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Mon espace</a>
                                     <ul class="dropdown-menu">
