--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -50,6 +50,7 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_game_new') }}">Create new</a>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('app_game_new') }}">Create new</a>
+    {% endif %}
 {% endblock %}
