--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
                                             <li><a class="dropdown-item" href="/dashboard" data-show="user">Dashboard</a></li>
                                             <li><a class="dropdown-item" href="/profil">Mes infos</a></li>
                                             <li><hr class="dropdown-divider"></li>
-                                            <li><button class="dropdown-item" id="/logout">Se déconnecter</button></li>
+                                            <li><a href="{{ path('app_logout') }}" class="dropdown-item" type="button" id="/logout">Se déconnecter</a></li>
                                         </ul>
                                     </li>
                                 {% elseif is_granted('ROLE_USER') %}
@@ -44,7 +44,7 @@
                                             <li><a class="dropdown-item" href="/order" data-show="user">Mon panier</a></li>
                                             <li><a class="dropdown-item" href="/profil">Mes infos</a></li>
                                             <li><hr class="dropdown-divider"></li>
-                                            <li><button class="dropdown-item" id="/logout">Se déconnecter</button></li>
+                                            <li><a href="{{ path('app_logout') }}" class="dropdown-item" type="button" id="/logout">Se déconnecter</a></li>
                                         </ul>
                                     </li>
                                 {% else %}
