--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,11 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <div class="hero-scene">
+        <div class="text-center hero-scene-content secondary">
+            <h1>S'inscrire</h1>
+        </div>
+    </div>
 
     {{ form_errors(registrationForm) }}
 
