--- a/templates/store/show.html.twig
+++ b/templates/store/show.html.twig
@@ -16,6 +16,10 @@
                 <td>{{ store.name }}</td>
             </tr>
             <tr>
+                <th>Image</th>
+                <td>{{ store.image }}</td>
+            </tr>
+            <tr>
                 <th>Open_time</th>
                 <td>{{ store.openTime ? store.openTime|date('H:i:s') : '' }}</td>
             </tr>
