--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,32 +19,32 @@
             <header>
                 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
                     <div class="container-fluid">
-                        <a class="navbar-brand text-purple" href="/">GameStore</a>
+                        <a class="navbar-brand secondary" href="/">GameStore</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse text-purple" id="navbarSupportedContent">
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                                <li class="nav-item"><a class="nav-link" href="/">Accueil</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/game">Nos jeux</a></li>
+                                <li class="nav-item"><a class="nav-link secondary" href="/">Accueil</a></li>
+                                <li class="nav-item"><a class="nav-link secondary" href="/game">Nos jeux</a></li>
                                 {% if (is_granted('ROLE_ADMIN') and is_granted('ROLE_USER') or (is_granted('ROLE_STAFF') and is_granted('ROLE_USER'))) %}
                                     <li class="nav-item dropdown" data-show="connected">
-                                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Mon espace</a>
+                                        <a class="nav-link dropdown-toggle secondary" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Mon espace</a>
                                         <ul class="dropdown-menu">
                                             <li><a class="dropdown-item" href="/dashboard" data-show="user">Dashboard</a></li>
                                             <li><a class="dropdown-item" href="/profil">Mes infos</a></li>
                                             <li><hr class="dropdown-divider"></li>
-                                            <li><a href="{{ path('app_logout') }}" class="dropdown-item" type="button" id="/logout">Se déconnecter</a></li>
+                                            <li><a href="{{ path('app_logout') }}" class="dropdown-item danger" type="button" id="/logout">Se déconnecter</a></li>
                                         </ul>
                                     </li>
                                 {% elseif is_granted('ROLE_USER') %}
-                                    <li class="nav-item dropdown" data-show="connected">
+                                    <li class="nav-item dropdown secondary" data-show="connected">
                                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Mon espace</a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="/order" data-show="user">Mon panier</a></li>
-                                            <li><a class="dropdown-item" href="/profil">Mes infos</a></li>
+                                            <li><a class="dropdown-item secondary" href="/order" data-show="user">Mon panier</a></li>
+                                            <li><a class="dropdown-item secondary" href="/profil">Mes infos</a></li>
                                             <li><hr class="dropdown-divider"></li>
-                                            <li><a href="{{ path('app_logout') }}" class="dropdown-item" type="button" id="/logout">Se déconnecter</a></li>
+                                            <li><a href="{{ path('app_logout') }}" class="dropdown-item sesondary" type="button" id="/logout">Se déconnecter</a></li>
                                         </ul>
                                     </li>
                                 {% else %}
@@ -58,7 +58,7 @@
                     <div class="container-fluid">
                         <form class="d-flex ms-auto" role="search">
                             <input class="form-control me-2" id="game-search" type="search" placeholder="Rechercher un jeu" aria-label="Search">
-                            <button class="btn btn-secondary" type="submit">Rechercher</button>
+                            <button class="btn btn-primary" type="submit">Rechercher</button>
                         </form>
                     </div>
                 </nav>
@@ -68,40 +68,96 @@
 
         {% block body %}
             <div class="hero-scene">
-                <div class="text-center hero-scene-content text-purple">
+                <div class="text-center hero-scene-content secondary">
                     <h1>GameStore</h1>
-                    <a class="btn btn-secondary" href="/store">Trouver mon magasin</a>
+                    <a class="btn btn-primary" href="/store">Trouver mon magasin</a>
                 </div>
             </div>
 
             <section>
                 <article>
                     <div class="container-1 p-4">
-                        <h2 class="text-center text-secondary p-4">Bienvenue sur GameStore</h2>
+                        <h2 class="text-center primary p-4">Bienvenue sur GameStore</h2>
                         <div class="justify-content-center text-center text-dark">
                             <p>Bienvenue sur GameStore, une boutique unique pour s'immerger dans l'univers des jeux vidéos. <br> Venez découvrir tous nos jeux!</p>
                             <p>Aucun paiement en ligne! <br> Trouvez la boutique la plus près de chez vous, réservez un jeu en directement sur le site, et venez le chercher près de chez vous! <br> Le paiement ne se fait qu'à se moment là!</p>
                         </div>
                         <div class="text-center">
-                            <a class="btn btn-secondary m-4" href="/store">Nos magasins</a>
+                            <a class="btn btn-primary m-4" href="/store">Nos magasins</a>
                         </div>
                     </div>
                 </article>
                 <article>
                     <div class="container-2 p-4">
                         <h2 class="text-center p-4 text-purple">Nos Promotions</h2>
-                        <p>[-- INSERER CARDS --]</p>
-                        <div class="text-center">
-                            <a class="btn btn-secondary m-4" href="/login">Profitez en vite ! Connectez vous !</a>
-                        </div>
+                            <div class="row">
+                                {% if promotedGames is not null %}
+                                    {% for game in promotedGames %}
+                                        <div class="col-md-4">
+                                            <div class="card m-3">
+                                                <div class="card-body text-center">
+                                                    <h5 class="card-title"><strong>{{ game.title }}</strong></h5>
+                                                    <div class="image">
+                                                        <img class="image-game" src="{{ asset('images/' ~ game.image) }}" alt="{{ game.title }}" width="300">
+                                                    </div>
+                                                    <p class="description"><strong>Description: </strong>{{ game.content }}</p>
+                                                    <p class="release-date"><strong>Date de sortie: </strong>{{ game.releaseDate ? game.releaseDate|date('d-m-Y') : '' }}</p>
+                                                    <p class="promotion"><strong>Prix : </strong><s>{{ game.price }}€</s> {{ game.promotion }}€ </p>
+                                                    <p class="pegi"><strong>Age requis: </strong>{{ game.pegi }}ans</p>
+                                                    <p class="genre"><strong>Genre: </strong>{{ game.genre|join(', ') }}</p>
+                                                    <p class="platform"><strong>Plateforme: </strong>{{ game.platform|join(', ') }}</p>
+                                                    {% if is_granted('ROLE_USER') %}                     
+                                                        <div class="basket-btn">
+                                                            <button type="" ><i class="bi bi-bag-plus-fill"></i></button>
+                                                        <div>
+                                                    {% endif %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {% endfor %}
+                                {% endif %}
+                            </div>
+                        {% if not is_granted('ROLE_USER') %}
+                            <div class="text-center">
+                                <a class="btn btn-secondary m-4" href="/login">Profitez en vite ! Connectez vous !</a>
+                            </div>
+                        {% endif %}
                     </div>
                 </article>
                 <article>
                     <div class="container-1 p-4">
-                        <h2 class="text-center text-secondary p-4">Les nouveautés</h2>
-                        <p>[-- INSERER CARDS --]</p>
+                        <h2 class="text-center primary p-4">Les nouveautés</h2>
+                        <div class="row">
+                        {% if recentGames is defined %}
+                            {% for game in recentGames %}
+                                <div class="col-md-4">
+                                    <div class="card m-3">
+                                        <div class="card-body text-center">
+                                            <h5 class="card-title"><strong>{{ game.title }}</strong></h5>
+                                            <div class="image">
+                                                <img class="image-game" src="{{ asset('images/' ~ game.image) }}" alt="{{ game.title }}" width="300">
+                                            </div>
+                                            <p class="description"><strong>Description: </strong>{{ game.content }}</p>
+                                            {% if game.promotion is not null %}
+                                                <p class="promotion"><strong>Prix : </strong><s>{{ game.price }}€</s> {{ game.promotion }}€ </p>
+                                            {% else %}
+                                                <p class="price"><strong>Prix: </strong>{{ game.price }}€</p>
+                                            {% endif %}
+                                            <p class="pegi"><strong>Age requis: </strong>{{ game.pegi }}ans</p>
+                                            <p class="genre"><strong>Genre: </strong>{{ game.genre|join(', ') }}</p>
+                                            {% if is_granted('ROLE_USER') %}                     
+                                                <div class="basket-btn">
+                                                    <button type=""><i class="bi bi-bag-plus-fill"></i></button>
+                                                </div>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                        </div>
                         <div class="text-center">
-                            <a class="btn btn-secondary m-4" href="/game">Nos jeux</a>
+                            <a class="btn btn-primary m-4" href="/game">Nos jeux</a>
                         </div>
                     </div>
                 </article>
@@ -113,17 +169,17 @@
         <footer class="bg-dark text-white text-center footer">
         <div class="row">
             <div class="col-12 col-lg-4">
-                <h3 class="text-purple"> Nos horaires</h3>
-                <p class="text-primary">Du Mardi au Samedi <br> <strong>Matin:</strong><br> 9h à 13h <br><strong>Après-midi:</strong><br> 14h30 à 19h</p>
+                <h3 class="secondary mt-3"> Nos horaires</h3>
+                <p class="tertiary">Du <strong><u>Mardi</u></strong> au <strong><u>Samedi</u></strong> <br> De <strong><u>9h à 19h</u></strong></p>
             </div>
             <div class="col-6 col-lg-4">
-                <h3 class="text-purple">Contact</h3>
-                <p><a href="/store">Nos magasins</a></p><br><br>
-                <p><a href="/legalMention">Mentions légales</a></p>
+                <h3 class="secondary mt-3">Contact</h3>
+                <p class="tertiary"><a href="/store">Nos magasins</a></p>
+                <p class="tertiary"><a href="/legalMention">Mentions légales</a></p>
             </div>
-            <div class="col-6 col-lg-4 text-primary">
-                <h3 class="text-purple">ECF</h3>
-                <p>Vanlaer Cynthia <br>Novembre/Décembre 2024</p>
+            <div class="col-6 col-lg-4">
+                <h3 class="secondary mt-3">ECF</h3>
+                <p class="tertiary"><strong>Vanlaer Cynthia</strong> <br>Novembre/Décembre 2024</p>
             </div>
         </div>
         </footer>
