--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -3,54 +3,80 @@
 {% block title %}Game index{% endblock %}
 
 {% block body %}
-    <h1>Game index</h1>
+    <div class="hero-scene">
+        <div class="text-center hero-scene-content secondary">
+            <h1>Tous nos jeux</h1>
+        </div>
+    </div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Content</th>
-                <th>Pegi</th>
-                <th>Genre</th>
-                <th>Price</th>
-                <th>Promotion</th>
-                <th>Platform</th>
-                <th>Image</th>
-                <th>Release_date</th>
-                <th>Created_at</th>
-                <th>Updated_at</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
+    <div class="row">
         {% for game in games %}
-            <tr>
-                <td>{{ game.id }}</td>
-                <td>{{ game.title }}</td>
-                <td>{{ game.content }}</td>
-                <td>{{ game.pegi }}</td>
-                <td>{{ game.genre }}</td>
-                <td>{{ game.price }}</td>
-                <td>{{ game.promotion }}</td>
-                <td>{{ game.platform }}</td>
-                <td>{{ game.image }}</td>
-                <td>{{ game.releaseDate ? game.releaseDate|date('Y-m-d') : '' }}</td>
-                <td>{{ game.createdAt ? game.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ game.updatedAt ? game.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_game_show', {'id': game.id}) }}">show</a>
-                    <a href="{{ path('app_game_edit', {'id': game.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="13">no records found</td>
-            </tr>
+            <div class="col-md-4 mt-3 mb-3">
+                <div class="card m-3">
+                    <div class="card-body text-center">
+                        <h5 class="card-title"><strong>{{ game.title }}</strong></h5>
+                        <div class="image">
+                            <img class="image-game" src="{{ asset('images/' ~ game.image) }}" alt="{{ game.title }}" width="300">
+                        </div>
+                        <p class="description"><strong>Description: </strong>{{ game.content }}</p>
+                        {% if game.promotion is not null %}
+                            <p class="promotion danger"><strong>Prix : </strong><s>{{ game.price }}€</s> {{ game.promotion }}€</p>
+                        {% else %}
+                            <p class="price"><strong>Prix: </strong>{{ game.price }}€</p>
+                        {% endif %}
+                        <p class="pegi"><strong>Age requis: </strong>{{ game.pegi }}ans</p>
+                        <p class="genre"><strong>Genre: </strong>{{ game.genre|join(', ') }}</p>
+                        <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#gameModal{{ game.id }}">Voir le jeu</a>
+                        {% if is_granted('ROLE_USER') %}                     
+                            <div class="m-3 primary">
+                                <button type="button">Ajouter au panier<i class="bi bi-bag-plus-fill"></i></button>
+                            </div>
+                        {% endif %}
+                        {% if is_granted('ROLE_ADMIN') %}                     
+                            <div class="m-3 text-center justify-content-center">
+                                <a href="" type="button" class="btn btn-info">Modifer</a>
+                                <a href="" type="button" class="btn btn-danger">Supprimer</a>
+                            </div>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+            
+                <!-- Modal -->
+            <div class="modal" id="gameModal{{ game.id }}" tabindex="-1" aria-labelledby="gameModalLabel{{ game.id }}" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content justify-content-center text-center">
+                        <div class="modal-header justify-content-center">
+                            <h5 class="modal-title" id="gameModalLabel{{ game.id }}">{{ game.title }}</h5>
+                        </div>
+                        <div class="modal-body">
+                            <div class="image">
+                                <img class="image-game" src="{{ asset('images/' ~ game.image) }}" alt="{{ game.title }}" width="150">
+                            </div>
+                            <p class="description"><strong>Description: </strong>{{ game.content }}</p>
+                            <p class="release-date"><strong>Date de sortie: </strong>{{ game.releaseDate ? game.releaseDate|date('d-m-Y') : '' }}</p>
+                            {% if game.promotion is not null %}
+                                <p class="promotion"><strong>Prix : </strong><s>{{ game.price }}€</s> {{ game.promotion }}€ </p>
+                            {% else %}
+                                <p class="price"><strong>Prix: </strong>{{ game.price }}€</p>
+                            {% endif %}
+                            <p class="pegi"><strong>Age requis: </strong>{{ game.pegi }}ans</p>
+                            <p class="genre"><strong>Genre: </strong>{{ game.genre|join(', ') }}</p>
+                            <p class="platform"><strong>Plateforme: </strong>{{ game.platform|join(', ') }}</p>
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         {% endfor %}
-        </tbody>
-    </table>
+    </div>
+
     {% if is_granted('ROLE_ADMIN') %}
-        <a href="{{ path('app_game_new') }}">Create new</a>
+    <div class='text-center'>
+        <a href="{{ path('app_game_new') }}" class="btn btn-primary m-3">Ajouter un jeu</a>
+    </div>
     {% endif %}
+
 {% endblock %}
