--- a/templates/game/edit.html.twig
+++ b/templates/game/edit.html.twig
@@ -3,11 +3,21 @@
 {% block title %}Edit Game{% endblock %}
 
 {% block body %}
-    <h1>Edit Game</h1>
+    {{ form_start(form) }}
+        {{ form_row(form.title) }}
+        {{ form_row(form.content) }}
+        {{ form_row(form.pegi) }}
+        {{ form_row(form.genre) }}
+        {{ form_row(form.price) }}
+        {{ form_row(form.promotion) }}
+        {{ form_row(form.platform) }}
+        {{ form_row(form.image) }}
+        {{ form_row(form.release_date) }}
+        {{ form_row(form.created_at) }}
+        {{ form_row(form.updated_at) }}
+        <button type="submit" class="btn btn-primary">Save</button>
+        <a href="{{ path('app_game_index') }}">Retourner à la liste</a>
 
-    {{ include('game/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_game_index') }}">back to list</a>
-
-    {{ include('game/_delete_form.html.twig') }}
+        {{ include('game/_delete_form.html.twig') }}
+    {{ form_end(form) }}
 {% endblock %}
